# tsuki-ex

./: .gitignore  README.md
firmware/: Cargo.toml  README.md  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/include/: tsuki_fw.h
firmware/src/: ffi.rs  main.rs
firmware/src/hal/: power.rs
firmware/src/modules/: bt.rs  fs.rs  mod.rs  wifi.rs
pkg/: packages.json
pkg/d1_mini-ex/v1.0.0/: tsuki_board.toml
pkg/d1_mini/v1.0.0/: README.md  ports.json  sandbox.json  tsuki_board.toml
pkg/esp32-ex/v1.0.0/: ports.json  sandbox.json  tsuki_board.toml
pkg/esp32/v1.0.0/: README.md  tsuki_board.toml
pkg/esp32c3-ex/v1.0.0/: README.md  ports.json  sandbox.json  tsuki_board.toml
pkg/esp32c3/v1.0.0/: tsuki_board.toml
pkg/esp32s2-ex/v1.0.0/: README.md  ports.json  sandbox.json  tsuki_board.toml
pkg/esp32s2/v1.0.0/: tsuki_board.toml
pkg/esp8266-ex/v1.0.0/: README.md  ports.json  sandbox.json  tsuki_board.toml
pkg/esp8266/v1.0.0/: tsuki_board.toml
tools/: package.py  pkg_manager.py
